--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ node_modules
 dist
 dist-ssr
 *.local
-./src/supabase-client.js
+src/supabase-client.js
 
 # Editor directories and files
 .vscode/*
